@@ -5,6 +5,8 @@ git-annex (10.20241032) UNRELEASED; urgency=medium
   * vpop: Only update state after successful checkout.
   * add: Consistently treat files in a dotdir as dotfiles, even
     when ran inside that dotdir.
+  * add: When adding a dotfile as a non-large file, mention that it's a
+    dotfile.
 
  -- Joey Hess <id@joeyh.name>  Mon, 11 Nov 2024 12:26:00 -0400
 
